# Node-based-image-processor

./: CMakeLists.txt  Design.md  README.md
src/: blurnode.cpp  blurnode.h  brightness.cpp  brightness.h  c_cpp_properties.json  connection.cpp  connection.h  imageinput.cpp  imageinput.h  main.cpp  node.cpp  node.h  outputnode.cpp  outputnode.h  tasks.json
